--- a/estilo.css
+++ b/estilo.css
@@ -6,67 +6,88 @@ h3{
     color: white;
 }
 
+/*link inicial*/
 a:link, a:visited{
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
+    text-decoration: none;/*retira toda decoracao*/
+    color: white;/*cor do texto*/
+    font-weight: 1000px;
     border-top: 1px solid black;
     border-bottom: 2px solid black;
     border-left: 1px solid black;
     border-right: 2px solid black;   
 }
-
+/*link com cursos em cima*/
 a:hover{
     color: white;
-    background-color: red;
+    background-color: red;/*cor do fundo*/
 }
+/*link clicado*/
 a:active{
-    background-color: green;
+    background-color: green;/*cor do fundo quando clicado*/
 }
-
+/*Paragrafo*/
 p{
     font-family: 'Times New Roman', Times, serif;
     font-size: 14px;
 }
-
+/*lista numerada*/
 ol{
-    list-style-type: none;
+    list-style-type: none;/*tira formatação*/
     color: black;
     background-color: gray;
+    width: 150px;
 }
-
+/*lista não ordenada*/
 ul{
     color: white;
 }
 
-label{
-    font-weight: bolder;
-}
-
 table{
-    font-weight: bolder;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     border-left: 1px solid black;
     border-right: 1px solid black;
 }
-
+/*Cabeçalho da tabela*/
 th{
     color: white;
     background-color: black;
+    font-weight: 300;
 }
-
+/*corpo da tabela*/
 td{
     color: black;
     background-color: gray;
-    font-weight: bold;
+    font-weight: 200;
 }
-
+/*rodape*/
 footer{
     background-color: gray;
+    background-size: 500px;
     color: white;
     text-decoration: underline;
     font-style: italic;
-    font-weight: bolder;
+    width: 500px;
+}
+/*formulario*/
+form{
+    margin-top: 1em;
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+    width: 350px;
 }
 
+label{
+    font-weight: 300;
+    display: inline-block;
+}
+
+input[type=text]{   
+    width:300px
+}
+ 
+input[type=number]{
+    width: 140px;
+
+}
