--- a/estilo.css
+++ b/estilo.css
@@ -69,8 +69,9 @@ footer{
     font-style: italic;
     width: 500px;
 }
+
 /*formulario*/
-form{
+.classe1{
     margin-top: 1em;
     padding: 1em;
     border: 1px solid #CCC;
@@ -78,9 +79,9 @@ form{
     width: 350px;
 }
 
-label{
+.classe2{
     font-weight: 300;
-    display: inline-block;
+    display: inline-block; 
 }
 
 input[type=text]{   
@@ -89,5 +90,4 @@ input[type=text]{
  
 input[type=number]{
     width: 140px;
-
 }
